Added tests for endpoint 2, and adjusted tests for endpoint 4